--- a/dj-sounds.html
+++ b/dj-sounds.html
@@ -12,7 +12,7 @@
       max-width: 500px;
       margin: 0 auto;
       padding: 20px;
-      background-color: #ffffff;
+      background-color: #f0f0f0;
       border-radius: 5px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
@@ -22,7 +22,7 @@
     }
 
     .form-group {
-      margin-bottom: 20px;
+      margin-bottom: 25px;
     }
 
     .form-group label {
