--- a/index.html
+++ b/index.html
@@ -68,42 +68,42 @@
       <div class="cities">
       <ul class="column1">
         <li class="city1"><a href="#" class="location">telangana</a></li>
-        <li class="city1"><a class="location">andhrapradesh</a></li>
-        <li class="city1"><a class="location">bihar</a></li>
-        <li class="city1"><a class="location">goa</a></li>
-        <li class="city1"><a class="location">westbengal</a></li>
-        <li class="city1"><a class="location">maharashtra</a></li>
-        <li class="city1"><a class="location">punjab</a></li>
-        <li class="city1"><a class="location">karnataka</a></li>
-        <li class="city1"><a class="location">tripura</a></li>
-        <li class="city1"><a class="location">mizoram</a></li>
-        <li class="city1"><a class="location">kerala</a></li>
+        <li class="city1"><a href="#" class="location">andhrapradesh</a></li>
+        <li class="city1"><a href="#" class="location">bihar</a></li>
+        <li class="city1"><a href="#" class="location">goa</a></li>
+        <li class="city1"><a href="#" class="location">westbengal</a></li>
+        <li class="city1"><a href="#" class="location">maharashtra</a></li>
+        <li class="city1"><a href="#" class="location">punjab</a></li>
+        <li class="city1"><a href="#" class="location">karnataka</a></li>
+        <li class="city1"><a herf="#" class="location">tripura</a></li>
+        <li class="city1"><a href="#" class="location">mizoram</a></li>
+        <li class="city1"><a href="#" class="location">kerala</a></li>
       </ul>
       <ul class="column1">
-        <li class="city1"><a class="location">gujarat</a></li>
-        <li class="city1"><a class="location">arunachalpradesh</a></li>
-        <li class="city1"><a class="location">haryana</a></li>
-        <li class="city1"><a class="location">uttarpradesh</a></li>
-        <li class="city1"><a class="location">madhyapradesh</a></li>
-        <li class="city1"><a class="location">sikkim</a></li>
-        <li class="city1"><a class="location">odisha</a></li>
-        <li class="city1"><a class="location">nagaland</a></li>
-        <li class="city1"><a class="location">rajasthan</a></li>
-        <li class="city1"><a class="location">tamilnadu</a></li>
-        <li class="city1"><a class="location">assam</a></li>
-        <li class="city1"><a class="location">manipur</a></li>
+        <li class="city1"><a herf="#" class="location">gujarat</a></li>
+        <li class="city1"><a herf="#"  class="location">arunachalpradesh</a></li>
+        <li class="city1"><a herf="#" class="location">haryana</a></li>
+        <li class="city1"><a herf="#" class="location">uttarpradesh</a></li>
+        <li class="city1"><a herf="#"  class="location">madhyapradesh</a></li>
+        <li class="city1"><a herf="#" class="location">sikkim</a></li>
+        <li class="city1"><a herf="#" class="location">odisha</a></li>
+        <li class="city1"><a herf="#" class="location">nagaland</a></li>
+        <li class="city1"><a herf="#" class="location">rajasthan</a></li>
+        <li class="city1"><a herf="#" class="location">tamilnadu</a></li>
+        <li class="city1"><a herf="#" class="location">assam</a></li>
+        <li class="city1"><a herf="#" class="location">manipur</a></li>
 
 
       </ul>
       <ul class="column1">
-        <li class="city1"><a class="location">manipur</a></li>
-        <li class="city1"><a class="location">himachalpradesh</a></li>
-        <li class="city1"><a class="location">delhi</a></li>
-        <li class="city1"><a class="location">chattisgarh</a></li>
-        <li class="city1"><a class="location">uttarkhand</a></li>
-        <li class="city1"><a class="location">jharkhand</a></li>
-        <li class="city1"><a class="location">meghalaya</a></li>
-        <li class="city1"><a class="location">jammu&kashmir</a></li>
+        <li class="city1"><a herf="#" class="location">manipur</a></li>
+        <li class="city1"><a herf="#" class="location">himachalpradesh</a></li>
+        <li class="city1"><a herf="#" class="location">delhi</a></li>
+        <li class="city1"><a herf="#" class="location">chattisgarh</a></li>
+        <li class="city1"><a herf="#" class="location">uttarkhand</a></li>
+        <li class="city1"><a herf="#" class="location">jharkhand</a></li>
+        <li class="city1"><a herf="#" class="location">meghalaya</a></li>
+        <li class="city1"><a herf="#" class="location">jammu&kashmir</a></li>
 
       </ul>
 
