--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
      <div class="back">
       <div class="cities">
       <ul class="column1">
-        <li class="city1"><a href="#" class="location">telangana</a></li>
+        <li class="city1"><a href="tenlangana" class="location">telangana</a></li>
         <li class="city1"><a href="#" class="location">andhrapradesh</a></li>
         <li class="city1"><a href="#" class="location">bihar</a></li>
         <li class="city1"><a href="#" class="location">goa</a></li>
