--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="cities">
       <ul class="column1">
         <li class="city1"><a href="tenlangana" class="location">telangana</a></li>
-        <li class="city1"><a href="#" class="location">andhrapradesh</a></li>
+        <li class="city1"><a href="andharpradesh" class="location">andhrapradesh</a></li>
         <li class="city1"><a href="#" class="location">bihar</a></li>
         <li class="city1"><a href="#" class="location">goa</a></li>
         <li class="city1"><a href="#" class="location">westbengal</a></li>
