--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <li class="city1"><a href="#" class="location">kerala</a></li>
       </ul>
       <ul class="column1">
-        <li class="city1"><a herf="#" class="location">gujarat</a></li>
+        <li class="city1"><a herf="gujarat" class="location">gujarat</a></li>
         <li class="city1"><a herf="#"  class="location">arunachalpradesh</a></li>
         <li class="city1"><a herf="#" class="location">haryana</a></li>
         <li class="city1"><a herf="#" class="location">uttarpradesh</a></li>
