--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <li class="city1"><a href="#" class="location">maharashtra</a></li>
         <li class="city1"><a href="#" class="location">punjab</a></li>
         <li class="city1"><a href="#" class="location">karnataka</a></li>
-        <li class="city1"><a herf="tripura" class="location">tripura</a></li>
+        <li class="city1"><a herf="#" class="location">tripura</a></li>
         <li class="city1"><a href="#" class="location">mizoram</a></li>
         <li class="city1"><a href="#" class="location">kerala</a></li>
       </ul>
