--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
       <ul class="column1">
         <li class="city1"><a href="tenlangana" class="location">telangana</a></li>
         <li class="city1"><a href="andharpradesh" class="location">andhrapradesh</a></li>
-        <li class="city1"><a href="#" class="location">bihar</a></li>
-        <li class="city1"><a href="#" class="location">goa</a></li>
-        <li class="city1"><a href="#" class="location">westbengal</a></li>
-        <li class="city1"><a href="#" class="location">maharashtra</a></li>
-        <li class="city1"><a href="#" class="location">punjab</a></li>
+        <li class="city1"><a href="bihar" class="location">bihar</a></li>
+        <li class="city1"><a href="goa" class="location">goa</a></li>
+        <li class="city1"><a href="westbengal" class="location">westbengal</a></li>
+        <li class="city1"><a href="maharashtra" class="location">maharashtra</a></li>
+        <li class="city1"><a href="punjab" class="location">punjab</a></li>
         <li class="city1"><a href="#" class="location">karnataka</a></li>
         <li class="city1"><a href="#" class="location">mizoram</a></li>
         <li class="city1"><a href="#" class="location">kerala</a></li>
@@ -82,8 +82,8 @@
         
       </ul>
       <ul class="column1">
-         <li class="city1"><a href="#" class="tirupati">tirupati</a></li>
-         <li class="city1"><a href="#" class="tirupati">tirupati</a></li>
+         <li class="city1"><a href="tirupati" class="tirupati">tirupati</a></li>
+         <li class="city1"><a href="tirupati" class="tirupati">tirupati</a></li>
          <li class="city1"><a href="#" class="tirupati">tirupati</a></li>
          <li class="city1"><a href="#" class="tirupati">tirupati</a></li>
          <li class="city1"><a href="#" class="tirupati">tirupati</a></li>
