--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
      <div class="sidebar">
        <header>menu</header>
        <ul>
-         <li><a href="#"><i class="fas fa-qrcode"></i>a></li>
+         <li><a href="#"><i class="fas fa-qrcode"></i>About</a></li>
        </ul>
        
      
