--- a/index.html
+++ b/index.html
@@ -112,7 +112,11 @@
      <div class="sidebar">
        <header>menu</header>
        <ul>
-         <li><a href="#"><i class="fas fa-qrcode"></i>About</a></li>
+         <li><a href="#"><i class="fas fa-qrcode"></i>Home</a></li>
+         <li><a href="#"><i class="far fa-quetsion-circle"></i>About</a></li>
+         <li><a href="#"><i class="fas fa-qrcode"></i>portfolio</a></li>
+         <li><a href="#"><i class="fas fa-qrcode"></i>Team</a></li>
+         <li><a href="#"><i class="fas fa-qrcode"></i>contact</a></li>
        </ul>
        
      
