--- a/index.html
+++ b/index.html
@@ -109,8 +109,15 @@
      </ul>
 
      </div></div>
+     
+       <input type="checkbox" id="check">
+       <label for="check">
+         <i class="fas fa-bars" id="btn"></i>
+         <i class="fas fa-times" id="cancel"></i>
+       </label>
+
      <div class="sidebar">
-       <header>menu</header>
+           <header>menu</header>
        <ul>
          <li><a href="#"><i class="fas fa-qrcode"></i>Home</a></li>
          <li><a href="#"><i class="far fa-quetsion-circle"></i>About</a></li>
