--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
      
            <header>menu</header>
        <ul>
-         <li><a href="#"><i class="fas fa-qrcode"></i>Home</a></li>
-         <li><a href="#"><i class="far fa-quetsion-circle"></i>About</a></li>
-         <li><a href="#"><i class="fas fa-qrcode"></i>portfolio</a></li>
-         <li><a href="#"><i class="fas fa-qrcode"></i>Team</a></li>
-         <li><a href="#"><i class="fas fa-qrcode"></i>contact</a></li>
+         <li><a href="#"><i class="fas fa-qrcode"></i>HOME</a></li>
+         <li><a href="#"><i class="far fa-quetsion-circle"></i>ABOUT</a></li>
+         <li><a href="#"><i class="fas fa-qrcode"></i>PORTFOLIO</a></li>
+         <li><a href="#"><i class="fas fa-qrcode"></i>TEAM</a></li>
+         <li><a href="#"><i class="fas fa-qrcode"></i>CONTACT</a></li>
        </ul>
      </div>
        
