--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   
   <div class="container">
-  <h1 class = "title"> BriGro</h1>
+  <h1 class = "title">Sandadi</h1>
   <h2 class = "descript">Choose the category<br>and<br>make your event wonderfull</h2>
   <div class="options">
     
