--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   </div>
   
     <div class="gallery">
-      <a target="_blank" href="venkatesh.jpg">
-        <img src="images/venkatesh.jpg" alt="person" width="600" height="400">
+      <a target="_blank" href="nani.jpeg">
+        <img src="images/nani.jpeg" alt="person" width="600" height="400">
       </a>
       <div class="desc">Full-stack<br>Developer</div>
     </div>
