--- a/choose1.html
+++ b/choose1.html
@@ -10,8 +10,8 @@
 <body>
     <div class="add">
     <div class="logo-container">
-        <a href="images/venue.png">
-        <img src="venue.png" class="logo"><br>
+        <a href="venue.html">
+        <img src="mages/venue.png" class="logo"><br>
         <span class="a">venue</span>
         </a>
       </div>
