--- a/choose1.html
+++ b/choose1.html
@@ -11,7 +11,7 @@
     <div class="add">
     <div class="logo-container">
         <a href="venue.html">
-        <img src="mages/venue.png" class="logo"><br>
+        <img src="images/venue.png" class="logo"><br>
         <span class="a">venue</span>
         </a>
       </div>
