img and html css category modified

--- a/choose2.html
+++ b/choose2.html
@@ -11,80 +11,80 @@
     <div class="add">
     <div class="logo-container">
         <a href="venue.html">
-        <img src="venue.png" class="logo"><br>
+        <img src="images/venue.png" class="logo"><br>
         <span class="a">venue</span>
         </a>
       </div>
       
       <div class="logo-container">
         <a href="dj-sounds.html">
-        <img src="dj-sounds.png" class="logo"><br><span>dj-sounds</span>
+        <img src="images/dj-sounds.png" class="logo"><br><span>dj-sounds</span>
         </a>
       </div>
       <div class="logo-container">
         <a href="decors.html">
-        <img src="decors.png" class="logo"><br><span>decors</span>
+        <img src="images/decors.png" class="logo"><br><span>decors</span>
         </a>
       </div>
       <div class="logo-container">
         <a href="photography.html">
-        <img src="photography.png" class="logo"><br><span>photography</span>
+        <img src="images/photography.png" class="logo"><br><span>photography</span>
         </a>
       </div>
       <div class="logo-container">
         <a href="catering.html">
-        <img src="catering.png" class="logo"><br><span>catering</span>
+        <img src="images/catering.png" class="logo"><br><span>catering</span>
         </a>
       </div>
       <div class="logo-container">
             <a href="choreography.html">
-            <img src="choreography.png" class="logo"><br><span>choreography</span>
+            <img src="images/choreography.png" class="logo"><br><span>choreography</span>
             </a>
           </div>
           <div class="logo-container">
           <a href="pandit.html">
-        <img src="pandit.png" class="logo"><br><span>pandit</span>
+        <img src="images/pandit.png" class="logo"><br><span>pandit</span>
          </a>
         </div>
       <div class="logo-container">
         <a href="makeup artist.html">
-        <img src="makeup artist.png" class="logo"><br><span>makeup artist</span>
+        <img src="images/makeup artist.png" class="logo"><br><span>makeup artist</span>
         </a>
       </div>
       <div class="logo-container">
         <a href="dancers.html">
-        <img src="dancers.png" class="logo"><br><span>dancers</span>
+        <img src="images/dancers.png" class="logo"><br><span>dancers</span>
         </a>
       </div>
       <div class="logo-container">
         <a href="anchors.html">
-        <img src="anchors.png" class="logo"><br>
+        <img src="images/anchors.png" class="logo"><br>
         <span>anchors</span>
         </a>
       </div>
       <div class="logo-container">
         <a href="invitation-cards.html">
-        <img src="invitation-cards.png" class="logo"><br><span>invitation-cards</span>
+        <img src="images/invitation-cards.png" class="logo"><br><span>invitation-cards</span>
         </a>
       </div>
       <div class="logo-container">
         <a href="honeymoon.html">
-        <img src="honeymoon.png" class="logo"><br><span>honeymoon</span>
+        <img src="images/honeymoon.png" class="logo"><br><span>honeymoon</span>
         </a>
       </div>
       <div class="logo-container">
         <a href="musical-concert.html">
-        <img src="musical-concert.png" class="logo"><br><span>musical-concert</span>
+        <img src="images/musical-concert.png" class="logo"><br><span>musical-concert</span>
         </a>
       </div>
       <div class="logo-container">
         <a href="wedding-planners.html">
-        <img src="wedding-planners.png" class="logo"><br><span>wedding-planners</span>
+        <img src="images/wedding-planners.png" class="logo"><br><span>wedding-planners</span>
         </a>
       </div>
       <div class="logo-container">
         <a href="wedding-vechicls.html">
-        <img src="wedding-vehicles.png" class="logo"><br><span>wedding-vehicles</span>
+        <img src="images/wedding-vehicles.png" class="logo"><br><span>wedding-vehicles</span>
         </a>
       </div>
     </div>
