--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   
     <div class="gallery">
       <a target="_blank" href="nani.jpeg">
-        <img src="images/nani.jpeg" alt="person" width="600" height="400">
+        <img src="#" alt="person" width="600" height="400">
       </a>
       <div class="desc">Full-stack<br>Developer</div>
     </div>
