--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet"  href="style.css">
+  <script src="https://kit.fontawesome.com/a49ab26e36.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  
   <div class="container">
-  <h1 class = "title">Sandadi</h1>
+   <h1 class = "title">Sandadi</h1>
   <h2 class = "descript">Choose the category<br>and<br>make your event wonderfull</h2>
-  <div class="options">
-    
-    <div class="dropdown">
-      <button class="dropbtn">category</button>
+  <div class="options"> 
+   <div class="dropdown">
+      <img class="navbar" src="images/sanadadi.png" alt="logo">
+      <button class='fas fa-clipboard-list'>category</button>
       <div class="dropdown-content">
+       
       <a href="choose1.html">choose category</a>
       <a href="choose2.html">add category</a>
       </div>
@@ -27,7 +28,7 @@
   
     <div class="gallery">
       <a target="_blank" href="nani.jpeg">
-        <img src="images/nani.jpeg" alt="person" width="600" height="400">
+        <img src="#" alt="person" width="600" height="400">
       </a>
       <div class="desc">Full-stack<br>Developer</div>
     </div>
